# SeExpr

./: .clang-format  .gitignore  .workonrc.products  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.config  Makefile.config.example  Makefile.example.mac.config  README  README.MD  README.md  SeExpr.spec.in  SeExpr_LLVM_Porting.html  TODO.txt  _config.yml  discussion.html  doc-overview.html  examples.html  index.html  llvm-make.txt  overview.html  style.css
src/SeExpr/: CMakeLists.txt  Context.cpp  Context.h  ContextUtils.cpp  ContextUtils.h  Curve.cpp  Curve.h  Evaluator.h  ExprBuiltins.cpp  ExprBuiltins.h  ExprConfig.h.in  ExprEnv.cpp  ExprEnv.h  ExprFunc.cpp  ExprFunc.h  ExprFuncStandard.cpp  ExprFuncStandard.h  ExprFuncX.cpp  ExprFuncX.h  ExprLLVM.h  ExprLLVMAll.h  ExprLLVMCodeGeneration.cpp  ExprLexer.l  ExprMultiExpr.cpp  ExprMultiExpr.h  ExprNode.cpp  ExprNode.h  ExprParseAction.h  ExprParser.h  ExprParser.y  ExprParserLex.h  ExprParserLex.l  ExprPatterns.h  ExprType.h  ExprWalker.cpp  ExprWalker.h  Expression.cpp  Expression.h  IndentedStreamBuf.h  Interpreter.cpp  (+56 more)
src/SeExpr/UI/: CMakeLists.txt  ExprBrowser.cpp  ExprCompletionModel.cpp  ExprCompletionModel.h  ExprControl.cpp  ExprControl.h  ExprCurve.cpp  ExprDeepWater.h  ExprFileDialog.h  ExprPopupDoc.h
src/SeExpr/parser/: ASTNode.h  SeExprLex.cpp  SeExprLex.h  SeExprParse.cpp  SeExprParse.h
src/SeExpr2/: CMakeLists.txt  Context.h  ContextUtils.cpp  Curve.cpp  Curve.h  Evaluator.h  ExprBuiltins.cpp  ExprBuiltins.h  ExprConfig.h.in  ExprEnv.cpp  ExprEnv.h  ExprFunc.cpp  ExprFunc.h  ExprFuncStandard.cpp  ExprFuncStandard.h  ExprFuncX.cpp  ExprFuncX.h  ExprLLVM.h  ExprLLVMAll.h  ExprLLVMCodeGeneration.cpp  ExprLexer.l  ExprMultiExpr.cpp  ExprMultiExpr.h  ExprNode.cpp  ExprNode.h  ExprParseAction.h  ExprParser.y  ExprType.h  ExprWalker.cpp  ExprWalker.h  Expression.cpp  Expression.h  IndentedStreamBuf.h  Interpreter.cpp  Interpreter.h  LLVMEvaluator.cpp  LLVMEvaluator.h  Mutex.h  Noise.cpp  Noise.h  (+7 more)
src/SeExpr2/UI/: BasicExpression.cpp  BasicExpression.h  CMakeLists.txt  ControlSpec.cpp  ControlSpec.h  Editable.h  EditableExpression.cpp  EditableExpression.h  ExprBrowser.cpp  ExprBrowser.h  ExprColorCurve.h  ExprColorSwatch.cpp  ExprColorSwatch.h  ExprCompletionModel.cpp  ExprCompletionModel.h  ExprControl.cpp  ExprControl.h  ExprControlCollection.cpp  ExprControlCollection.h  ExprCurve.cpp  ExprCurve.h  ExprDeepWater.cpp  ExprDeepWater.h  ExprDialog.cpp  ExprDialog.h  ExprEditor.cpp  ExprEditor.h  ExprFileDialog.cpp  ExprFileDialog.h  ExprGrapher2d.cpp  ExprHelp.cpp  ExprHighlighter.h  ExprPopupDoc.cpp  ExprShortEdit.cpp  ExprShortEdit.h  ExprSpecParser.y  ExprSpecParserLex.l  ExprSpecType.h  ExprWidgets.cpp  ExprWidgets.h  (+3 more)
src/SeExpr2/parser/: SeExprLex.cpp  SeExprParse.h
src/SeExprEditor/: CMakeLists.txt  ControlSpec.cpp  ControlSpec.h  QdSeBrowser.cpp  QdSeBrowser.h  QdSeCCurve.cpp  QdSeCCurve.h  QdSeCompletionModel.cpp  QdSeCompletionModel.h  QdSeControl.cpp  QdSeControl.h  QdSeControlCollection.cpp  QdSeControlCollection.h  QdSeCurve.cpp  QdSeCurve.h  QdSeDialog.cpp  QdSeDialog.h  QdSeEditable.h  QdSeEditableExpression.cpp  QdSeEditableExpression.h  QdSeEditor.cpp  QdSeEditor.h  QdSeExpr.cpp  QdSeExpr.h  QdSeFileDialog.cpp  QdSeFileDialog.h  QdSeGrapher2d.cpp  QdSeGrapher2d.h  QdSeHelp.h  QdSeHighlighter.h  QdSePopupDocumentation.cpp  QdSePopupDocumentation.h  QdSeShortEdit.cpp  QdSeShortEdit.h  SeControlSpec.cpp  SeControlSpec.h  SeExprEdBrowser.cpp  SeExprEdBrowser.h  SeExprEdColorCurve.cpp  SeExprEdColorCurve.h  (+35 more)
src/SeExprEditor/CE/: CECurveListUI.cpp  CECurveListUI.h  CEDragHandlers.cpp  CEDragHandlers.h  CEGraphCurve.cpp  CEGraphCurve.h  CEGraphKey.cpp  CEGraphKey.h  CEGraphSeg.cpp  CEGraphSeg.h  CEGraphUI.cpp  CEGraphUI.h  CEGraphView.h  CEMainUI.cpp  CEMainUI.h  CESegEditUI.cpp  CESegEditUI.h  CETool.cpp  CETool.h  crap.cpp  test.cpp
src/demos/: CMakeLists.txt  asciiCalculator.cpp  asciiGraph.cpp  expreditor.cpp  llvmtest.cpp  pyexpreditor
src/demos/common/: ImageSynthesizer.h  png++.h
src/demos/imageEditor/: CMakeLists.txt  ImageEditorDialog.h  config.txt  fbm.se  imageEditor.cpp  noise.se  noisecolor1.se  noisecolor2.se  palette.h  raytrace.se  sinc.se
src/demos/imageSynth/: CMakeLists.txt  imageSynth.cpp  imageSynthForPaint3d.cpp
src/demos/imageSynth2/: CMakeLists.txt  imageSynth.cpp  imageSynthForPaint3d.cpp
src/demos/mandelbrot/: CMakeLists.txt  README.md  Vec-impl.h  (+9 more)
src/doc/: CMakeLists.txt  Doxyfile.in  SeExpr_LLVM_Typing.html  license.txt  main.txt  plugins.txt  tutorial.txt  uitutorial.txt  userdoc.txt  varblocks.txt
src/py/: CMakeLists.txt  SeExprPy.cpp  __init__.py  example.py  parseAll.py  test.py  utils.py
src/tests/: BlockTests.cpp  CMakeLists.txt  SeTests.h  TypeBuilder.h  TypeIterator.h  TypePrinter.cpp  TypePrinter.h  TypeTester.cpp  TypeTester.h  VarBlockExample.cpp  basic.cpp  basicPython.py  dirtSimple.cpp  eval.cpp  genImageTestFile.py  htmlReport.py  imageTests.cpp  imageTests.h  imageTestsReport.py  imageTestsReportNew.py  imagediff.py  listVar.cpp  llvmtest.se  llvmtest.str.se  llvmtest.test.se  multi.cpp  multiTests.cpp  patterns.cpp  shortEdit.py  simpleEditor.py  string.cpp  testSeExprExamples.cpp  testmain.cpp  typePrinter.cpp  typeTests.cpp  typeTests.h
src/ui/: BasicExpression.cpp  BasicExpression.h  CMakeLists.txt  ControlSpec.cpp  ControlSpec.h  EditMain.cpp  Editable.h  EditableExpression.cpp  EditableExpression.h  ExprBrowser.cpp  ExprBrowser.h  ExprColorCurve.cpp  ExprColorCurve.h  ExprColorSwatch.cpp  ExprColorSwatch.h  ExprCompletionModel.cpp  ExprCompletionModel.h  ExprControl.cpp  ExprControl.h  ExprControlCollection.cpp  ExprControlCollection.h  ExprCurve.cpp  ExprCurve.h  ExprDeepWater.cpp  ExprDeepWater.h  ExprDialog.cpp  ExprDialog.h  ExprEditor.cpp  ExprEditor.h  ExprFileDialog.cpp  ExprFileDialog.h  ExprGrapher2d.cpp  ExprGrapher2d.h  ExprHelp.cpp  ExprHelp.h  ExprHighlighter.h  ExprMain.cpp  ExprPopupDoc.cpp  ExprPopupDoc.h  ExprShortEdit.cpp  (+9 more)
src/utils/: CMakeLists.txt  concurrent-for.h  eval.cpp  listVar.cpp  patterns.cpp
(+1406 files in other folders)
